# NodeEditor

./: .gitignore  HISTORY.rst  LICENCE  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/example_calculator/: calc_conf.py  calc_conf_nodes.py  calc_drag_listbox.py  calc_node_base.py  calc_sub_window.py  calc_window.py  main.py
examples/example_calculator/nodes/: input.py  operations.py  output.py
examples/example_calculator/qss/: nodeeditor.qss
examples/example_test/: graph.json  graph.json.txt  main.py  test
nodeeditor/: __init__.py  node_content_widget.py  node_edge.py  node_edge_dragging.py  node_editor_widget.py  node_editor_window.py  node_graphics_cutline.py  node_graphics_edge.py  node_graphics_edge_path.py  node_graphics_node.py  node_graphics_scene.py  node_graphics_socket.py  node_graphics_view.py  node_node.py  node_scene.py  node_scene_clipboard.py  node_scene_history.py  node_serializable.py  node_socket.py  utils.py
tests/: test_000_import.py  test_basic.py
