[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodeeditor"
version = "0.9.0"
description = "A Node Editor application"
readme = "README.rst"
authors = [
    {name = "Alexandr Vitruk", email = "a.vitruk@blackhub.games"}
]
requires-python = ">=3.13"
dependencies = ["PySide6"]
license = {text = "MIT"}
keywords = ["nodeeditor"]

[tool.setuptools]
packages = ["nodeeditor"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
]